--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nanoexpress-pro",
-  "version": "1.4.19",
+  "version": "1.4.20",
   "description": "Nano-framework for Node.js powered by uWebSockets.js",
   "main": "build/nanoexpress.js",
   "module": "src/nanoexpress.js",
@@ -39,7 +39,7 @@
   },
   "homepage": "https://github.com/dalisoft/nanoexpress#readme",
   "dependencies": {
-    "@dalisoft/events": "0.0.11",
+    "@dalisoft/events": "^0.2.0",
     "ajv": "^6.10.2",
     "cookie": "^0.x",
     "fast-json-stringify": "^1.15.6",
