--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nanoexpress-pro",
-  "version": "1.6.22",
+  "version": "1.6.23",
   "description": "Nano-framework for Node.js powered by uWebSockets.js",
   "main": "build/nanoexpress.js",
   "module": "src/nanoexpress.js",
@@ -33,7 +33,7 @@
     "c++"
   ],
   "author": "dalisoft",
-  "license": "Apache-2.0",
+  "license": "GPL-3.0",
   "bugs": {
     "url": "https://github.com/dalisoft/nanoexpress/issues"
   },
