--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nanoexpress-pro",
-  "version": "1.6.23",
+  "version": "1.7.0",
   "description": "Nano-framework for Node.js powered by uWebSockets.js",
   "main": "build/nanoexpress.js",
   "module": "src/nanoexpress.js",
@@ -41,6 +41,7 @@
   "dependencies": {
     "@dalisoft/events": "^0.2.0",
     "ajv": "^6.10.2",
+    "busboy": "^0.3.1",
     "cookie": "^0.x",
     "fast-json-stringify": "^1.15.7",
     "uWebSockets.js": "github:uNetworking/uWebSockets.js#binaries"
