update deps and remote node v10 as we support only node v12+

--- a/.eslintrc
+++ b/.eslintrc
@@ -19,13 +19,7 @@
       }
     ],
     "eol-last": ["error", "always"],
-    "indent": [
-      "error",
-      2,
-      {
-        "MemberExpression": 1
-      }
-    ],
+    "indent": "off",
     "no-multiple-empty-lines": ["error"],
     "no-new-symbol": "error",
     "no-trailing-spaces": ["error"],
