--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nanoexpress",
-  "version": "1.1.12",
+  "version": "1.1.13",
   "description": "Nano-framework for Node.js powered by uWebSockets.js",
   "main": "build/nanoexpress.js",
   "module": "src/nanoexpress.js",
@@ -44,8 +44,8 @@
     "uWebSockets.js": "github:uNetworking/uWebSockets.js#v16.5.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.7.7",
-    "@babel/preset-env": "^7.7.7",
+    "@babel/core": "^7.8.0",
+    "@babel/preset-env": "^7.8.2",
     "coveralls": "^3.0.6",
     "eslint": "^6.8.0",
     "husky": "^4.0.2",
@@ -53,9 +53,7 @@
     "lint-staged": "^9.2.5",
     "prettier": "^1.17.1",
     "rollup": "^1.27.14",
-    "rollup-plugin-json": "^4.0.0",
-    "rollup-plugin-node-resolve": "^5.2.0",
-    "rollup-plugin-run": "^1.1.0"
+    "rollup-plugin-node-resolve": "^5.2.0"
   },
   "peerDependencies": {
     "ajv": "^6.x",
