--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,7 +1,7 @@
 # These are supported funding model platforms
 
 # github: dalisoft
-patreon: dalisoft # Replace with a single Patreon username
+patreon: nanoexpress # Replace with a single Patreon username
 open_collective: # Replace with a single Open Collective username
 ko_fi: # dalisoft # Replace with a single Ko-fi username
 tidelift: # Replace with a single Tidelift platform-name/package-name e.g., npm/babel
