--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nanoexpress",
-  "version": "1.1.17",
+  "version": "1.1.18",
   "description": "Nano-framework for Node.js powered by uWebSockets.js",
   "main": "build/nanoexpress.js",
   "module": "src/nanoexpress.js",
@@ -45,7 +45,7 @@
   "dependencies": {
     "@dalisoft/events": "^0.2.0",
     "debug": "^4.1.1",
-    "uWebSockets.js": "github:uNetworking/uWebSockets.js#v17.3.0"
+    "uWebSockets.js": "github:uNetworking/uWebSockets.js#binaries"
   },
   "devDependencies": {
     "@babel/core": "^7.8.0",
