--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "nanoexpress",
-  "version": "2.0.1",
-  "description": "Nano-framework for Node.js powered by uWebSockets.js",
+  "version": "2.0.2",
+  "description": "Nano-framework for Node.js",
   "main": "build/nanoexpress.js",
   "module": "src/nanoexpress.js",
   "typings": "nanoexpress.d.ts",
@@ -21,7 +21,7 @@
     "prepublishOnly": "npm run lint && npm run build"
   },
   "engines": {
-    "node": ">=10.x"
+    "node": ">=12.16"
   },
   "repository": {
     "type": "git",
@@ -49,14 +49,14 @@
   },
   "devDependencies": {
     "@babel/core": "^7.8.0",
-    "@babel/preset-env": "^7.8.2",
-    "coveralls": "^3.0.6",
+    "@babel/preset-env": "^7.9.5",
+    "coveralls": "^3.1.0",
     "eslint": "^6.8.0",
-    "husky": "^4.0.2",
-    "jest": "^25.1.0",
-    "lint-staged": "^10.0.3",
-    "prettier": "^2.0.1",
-    "rollup": "^2.1.0",
+    "husky": "^4.2.5",
+    "jest": "^25.4.0",
+    "lint-staged": "^10.1.7",
+    "prettier": "^2.0.5",
+    "rollup": "^2.7.3",
     "rollup-plugin-node-resolve": "^5.2.0"
   },
   "peerDependencies": {
