--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "watch-dev": "NODE_ENV=development rollup -c -w",
     "build": "rollup -c",
     "lint": "eslint ./src",
-    "test": "jest --config jest.config.js",
+    "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js --config jest.config.json",
     "coverage": "npm run test --coverage",
     "coveralls": "npm run coverage && cat ./tests/coverage/lcov.info | coveralls",
     "prepublishOnly": "npm run lint && npm run build"
@@ -48,15 +48,15 @@
     "uWebSockets.js": "github:uNetworking/uWebSockets.js#binaries"
   },
   "devDependencies": {
-    "@babel/core": "^7.8.0",
-    "@babel/preset-env": "^7.9.5",
+    "@babel/core": "^7.9.6",
+    "@babel/preset-env": "^7.9.6",
     "coveralls": "^3.1.0",
     "eslint": "^6.8.0",
     "husky": "^4.2.5",
-    "jest": "^25.4.0",
-    "lint-staged": "^10.1.7",
+    "jest": "^26.0.1",
+    "lint-staged": "^10.2.2",
     "prettier": "^2.0.5",
-    "rollup": "^2.7.3",
+    "rollup": "^2.8.2",
     "rollup-plugin-node-resolve": "^5.2.0"
   },
   "peerDependencies": {
